k8s-yaml/kubeapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dorrdorsela
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dorrdorsela
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: dorrdorsela
    spec:
      imagePullSecrets:
        - name: azurecr
      containers:
        - name: dorrdorsela
          image: acrwnt.azurecr.io/dorrdorsela:200
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi 
          ports:
          - containerPort: 80
