k8s-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dorrdorsela
  namespace: dor
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dorrdorsela
