k8s-yaml/dor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dorrdorsela
  namespace: dor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dorrdorsela
  template:
    metadata:
      labels:
        app: dorrdorsela
    spec:
      containers:
        - name: dorrdorsela
          image: azurecr2.azurecr.io/azurecr2/dorrdorsela:100
          ports:
            - containerPort: 80
          resources:
              requests:
                cpu: "1"
                memory: "1"
              limits:
                cpu: "1"
                memory: "1" 
---
apiVersion: v1
kind: Service
metadata:
  name: dorrdorsela
  namespace: dor
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dorrdorsela
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dorrdorsela-v1
  namespace: dor
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dorrdorsela
            port: 
              number: 80
